--- a/contato.html
+++ b/contato.html
@@ -1,53 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Contato</title>
-	</head>
-	<body>
-		<nav>
-			<ul>
-				<li>
-					<a href="index.html"> Home </a>
-				</li>
-				<li>
-					<a href="contato.html"> Contato </a>
-				</li>
-			</ul>
-		</nav>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Contato</title>
+	<link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+	<nav>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="contato.html">Contato</a></li>
+		</ul>
+	</nav>	
+	<section>
 		<h1>Entre em contato comigo</h1>
-		<section>
-			<form>
-				<div>
-					<label for="nome">Nome: </label> <br>
-					<input type="text" id="nome">
-				</div>
-				<br>
-				<div>
-					<label for="email">E-mail: </label> <br>
-					<input type="email" id="email">
-				</div>
-				<br>
-				<div>
-					<label for="assunto">Assunto: </label> <br>
-					<textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
-				</div>
-				<br>
-				<div>
-					<button> Enviar </button>
-				</div>
-			</form>
-		</section>
-		<br>
-		<section>
-			<h3>Localização: </h3>
-			<p>R. Gilberto Sabino, 215</p>
-			<p>Pinheiros, São Paulo - SP, 05425-020</p>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.042499377271!2d-46.70352252496692!3d-23.5669170617958!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce576b57df460b%3A0xe19103c1961dc69c!2sSumUp%20Brasil!5e0!3m2!1sen!2sbr!4v1718375594578!5m2!1sen!2sbr"
-				width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-			</iframe>
-		</section>
+		<form>
+			<div class="form-group">
+				<label for="nome">Nome:</label>
+				<input type="text" id="nome" name="nome">
+			</div>
 
-	</body>
+			<div class="form-group">
+				<label for="email">E-mail:</label>
+				<input type="email" id="email" name="email">
+			</div>
+
+			<div class="form-group">
+				<label for="assunto">Assunto:</label>
+				<textarea id="assunto" name="assunto" cols="60" rows="5"></textarea>
+			</div>
+
+			<div class="form-group">
+				<button type="submit">Enviar</button>
+			</div>
+		</form>
+	</section>
+
+	<section>
+		<h3 class="sec-titles">Localização:</h3>
+		<p>R. Gilberto Sabino, 215</p>
+		<p>Pinheiros, São Paulo - SP, 05425-020</p>
+		<iframe id="map-iframe"
+			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.042499377271!2d-46.70352252496692!3d-23.5669170617958!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce576b57df460b%3A0xe19103c1961dc69c!2sSumUp%20Brasil!5e0!3m2!1sen!2sbr!4v1718375594578!5m2!1sen!2sbr" 
+			width="400" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+		</iframe>
+	</section>
+</body>
 </html>
