--- a/contato.html
+++ b/contato.html
@@ -18,21 +18,23 @@
 		<form>
 			<div class="form-group">
 				<label for="nome">Nome:</label>
-				<input type="text" id="nome" name="nome">
+				<input type="text" id="nome" name="nome" onkeyup="validaNome()">
+				<div id="divNome"></div>
 			</div>
-
 			<div class="form-group">
 				<label for="email">E-mail:</label>
-				<input type="email" id="email" name="email">
+				<input type="email" id="email" name="email" onkeyup="validaEmail()">
+				<div id="divEmail"></div>
 			</div>
 
 			<div class="form-group">
 				<label for="assunto">Assunto:</label>
-				<textarea id="assunto" name="assunto" cols="60" rows="5"></textarea>
+				<textarea onkeyup="validaAssunto()" id="assunto" name="assunto" cols="60" rows="5"></textarea>
+				<div id="divAssunto"></div>
 			</div>
 
 			<div class="form-group">
-				<button type="submit">Enviar</button>
+				<button onclick="enviar()" type="submit">Enviar</button>
 			</div>
 		</form>
 	</section>
@@ -41,10 +43,25 @@
 		<h3 class="sec-titles">Localização:</h3>
 		<p>R. Gilberto Sabino, 215</p>
 		<p>Pinheiros, São Paulo - SP, 05425-020</p>
-		<iframe id="map-iframe"
+		<iframe id="map-iframe" onmousemove="mapaZoom()" onmouseout="mapaNormal()"
 			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.042499377271!2d-46.70352252496692!3d-23.5669170617958!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce576b57df460b%3A0xe19103c1961dc69c!2sSumUp%20Brasil!5e0!3m2!1sen!2sbr!4v1718375594578!5m2!1sen!2sbr" 
 			width="400" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
 		</iframe>
 	</section>
+
+	<footer>
+		<div class="footer-content">
+			<div class="social-media">
+				<a href="https://facebook.com" target="_blank"><img src="assets/icons/facebook.png" alt="Facebook"></a>
+				<a href="https://twitter.com" target="_blank"><img src="assets/icons/twitter.png" alt="Twitter"></a>
+				<a href="https://linkedin.com" target="_blank"><img src="assets/icons/linkedin.png" alt="LinkedIn"></a>
+				<a href="https://github.com" target="_blank"><img src="assets/icons/github.png" alt="GitHub"></a>
+			</div>
+			<p>&copy; 2024 Ericles Piana. Todos os direitos reservados.</p>
+			<p>Desenvolvido por Ericles Piana</p>
+		</div>
+	</footer>
+
+	<script src="assets/js/script.js"></script>
 </body>
 </html>
