--- a/index.html
+++ b/index.html
@@ -52,5 +52,19 @@
 			</iframe>
 		</div>
 	</section>
+
+	<footer>
+		<div class="footer-content">
+			<div class="social-media">
+				<a href="https://facebook.com" target="_blank"><img src="assets/icons/facebook.png" alt="Facebook"></a>
+				<a href="https://twitter.com" target="_blank"><img src="assets/icons/twitter.png" alt="Twitter"></a>
+				<a href="https://linkedin.com" target="_blank"><img src="assets/icons/linkedin.png" alt="LinkedIn"></a>
+				<a href="https://github.com" target="_blank"><img src="assets/icons/github.png" alt="GitHub"></a>
+			</div>
+			<p>&copy; 2024 Ericles Piana. Todos os direitos reservados.</p>
+			<p>Desenvolvido por Ericles Piana</p>
+		</div>
+	</footer>
+	
 </body>
 </html>
